--- a/html/GioiThieu.html
+++ b/html/GioiThieu.html
@@ -390,80 +390,62 @@
 
 
 
-    <section class="IBS_Contanct container" style="margin-top: 5%;">
-        <h2 class="text-center text-color">GÓC CHIA SẺ</h2>
-        <form>
-            <div class="form-share">
-                <div class="form-text">
-                    <textarea name="option" id="option" cols="200" rows="10" class="form-control" placeholder=" Sân khấu nhỏ IBSEN nghe nè! Sân khấu nhỏ IBSEN sẻ gửi những chia sẻ của bạn vào vũ trụ." style="border-radius: 20px;
-       border: 2px solid #a90303; margin-bottom: 1%;"></textarea>
-                </div>
-                <p style="font-size: 20px; text-align: center; margin-bottom: 0;">
-                    <span style="font-size: 30px;">SUỴT!</span> Tất cả những chia sẻ của bạn đều được bảo mật đó nha.
-                </p>
+    <footer class="container-fluid ">
+        <div class="row container mx-atuo">
+          <div class="col-md-4 col-sm-12 footer_intro">
+            <img src="../img/logo-isben.png" style="width: 40%;">
+              <h3>IBSEN Tiny Stage</h3>
+              <ul>
+                <li><a href="../index.html">Trang chủ |</a></li>
+                <li><a href="./GioiThieu.html#intro">Giới thiệu |</a></li>
+                <li><a href="#">Tổ chức |</a></li>
+                <p>© IBSEN Tiny Stage 2020</p>
+              </ul>
+          </div>
 
-                <button type="submit" class="bnt btn-outline-danger">GỬI</button>
-
+          <div class="col-md-4 col-sm-12 footer_connect">
+            <p><i class="fa fa-map-marked"></i> 141 Điện Biên Phủ, TPHCM</p>
+            <p><i class="fa fa-mobile-alt"></i> 0123456789</p>
+            <p><i class="fa fa-envelope"></i>  hoangnt18@uef.edu.vn</p>
+            <h3>KẾt nối với chúng tôi</h3>
+            <div class="row">
+            <div class="col-sm-4">
+              <a href="#"><img src="../img/ifacebook.png" class="img-thumbnail"></a> 
             </div>
-        </form>
-    </section>
-
-
-
-
-
-    <footer class="row container-fluid bg-danger text-light">
-        <div class="col-sm-12 col-md-3 footer_left">
-            <img src="../img/logo-isben.png " />
+            <div class="col-sm-4">
+               <a href="#"><img src="../img/icon-zalo.png" class="img-thumbnail"/></a>
+            </div>
+          </div>
         </div>
 
-        <div class="col-sm-12 col-md-9 row footer_right">
-            <div class="col-sm-12 col-md-4">
-                <div>
-                    <h3>IBSEN</h3>
-                    <ul>
-                        <li>
-                            <a href="#">Giới Thiệu</a>
-                        </li>
-                        <li>
-                            <a href="#">Tin Tức</a>
-                        </li>
+        <div class="col-md-4">
+          <form>
 
-                        <li>
-                            <a href="#">Câu Chuyện</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Đối Tác</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="form-group row">
+              <div class="col-sm-10">
+                <input type="text" class="form-control"  placeholder="Nhập tên của bạn">
+              </div>
             </div>
-
-
-            <div class="col-sm-12 col-md-4 ">
-                <h3>SOCIAL</h3>
-                <div class="footer_item1 row" id="footer_item1 ">
-                    <div class="col-sm-">
-                        <img src="../img/facebook-logo.png">
-                    </div>
-
-                    <div class="col-sm-">
-                        <img src="../img/zalo-2.png" />
-                    </div>
-                </div>
-
+            <div class="form-group row">
+              <div class="col-sm-10">
+                <input type="email" class="form-control"  placeholder="Nhập email của bạn">
+              </div>
             </div>
-
-            <div class="col-sm-12 col-md-4">
-                <h3>Nhận thông báo</h3>
-                <div class="footer-form">
-                    <textarea placeholder="Nhập email của bạn" style="width: 100%; width: 100%;  border: none;  background-color: #ffebed;  border-bottom: 2px solid #f5b3b3;"></textarea>
-                    <button type="submit" class="footer-button">Gửi</button>
-                </div>
+            <div class="form-group row">
+              <div class="col-sm-10">
+                <textarea cols="30" rows="10" class="form-control" placeholder="Phản hồi của bạn"></textarea>
+              </div>
             </div>
+            <button class="btn btn-outline-danger">Gửi phản hồi</button>
+          </form>
+        </div>
+      </div>
+      </footer>
 
-    </footer>
+
+
+
+
 
 
 
