--- a/html/QuyenGop.html
+++ b/html/QuyenGop.html
@@ -126,58 +126,57 @@
 
 
 
-    <footer class="row container-fluid bg-danger text-light">
-        <div class="col-sm-12 col-md-3 footer_left">
-            <img src="../img/logo-isben.png " />
+    <footer class="container-fluid ">
+        <div class="row container mx-atuo">
+          <div class="col-md-4 col-sm-12 footer_intro">
+            <img src="../img/logo-isben.png" style="width: 40%;">
+              <h3>IBSEN Tiny Stage</h3>
+              <ul>
+                <li><a href="../index.html">Trang chủ |</a></li>
+                <li><a href="./GioiThieu.html#intro">Giới thiệu |</a></li>
+                <li><a href="#">Tổ chức |</a></li>
+                <p>© IBSEN Tiny Stage 2020</p>
+              </ul>
+          </div>
+
+          <div class="col-md-4 col-sm-12 footer_connect">
+            <p><i class="fa fa-map-marked"></i> 141 Điện Biên Phủ, TPHCM</p>
+            <p><i class="fa fa-mobile-alt"></i> 0123456789</p>
+            <p><i class="fa fa-envelope"></i>  hoangnt18@uef.edu.vn</p>
+            <h3>KẾt nối với chúng tôi</h3>
+            <div class="row">
+            <div class="col-sm-4">
+              <a href="#"><img src="../img/ifacebook.png" class="img-thumbnail"></a> 
+            </div>
+            <div class="col-sm-4">
+               <a href="#"><img src="../img/icon-zalo.png" class="img-thumbnail"/></a>
+            </div>
+          </div>
         </div>
 
-        <div class="col-sm-12 col-md-9 row footer_right">
-            <div class="col-sm-12 col-md-4">
-                <div>
-                    <h3>Ibsen</h3>
-                    <ul>
-                        <li>
-                            <a href="#">Giới Thiệu</a>
-                        </li>
-                        <li>
-                            <a href="#">Tin Tức</a>
-                        </li>
+        <div class="col-md-4">
+          <form>
 
-                        <li>
-                            <a href="#">Câu Chuyện</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Đối Tác</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="form-group row">
+              <div class="col-sm-10">
+                <input type="text" class="form-control"  placeholder="Nhập tên của bạn">
+              </div>
             </div>
-
-
-            <div class="col-sm-12 col-md-4 ">
-                <h3>Social</h3>
-                <div class="footer_item1 row" id="footer_item1 ">
-                    <div class="col-sm-">
-                        <img src="../img/facebook-logo.png">
-                    </div>
-
-                    <div class="col-sm-">
-                        <img src="../img/zalo-2.png" />
-                    </div>
-                </div>
-
+            <div class="form-group row">
+              <div class="col-sm-10">
+                <input type="email" class="form-control"  placeholder="Nhập email của bạn">
+              </div>
             </div>
-
-            <div class="col-sm-12 col-md-4">
-                <h3>Nhận thông báo</h3>
-                <div class="footer-form">
-                    <textarea placeholder="Nhập email của bạn" style="width: 100%; width: 100%;  border: none;  background-color: #ffebed;  border-bottom: 2px solid #f5b3b3;"></textarea>
-                    <button type="submit" class="footer-button">Gửi</button>
-                </div>
+            <div class="form-group row">
+              <div class="col-sm-10">
+                <textarea cols="30" rows="10" class="form-control" placeholder="Phản hồi của bạn"></textarea>
+              </div>
             </div>
-
-    </footer>
+            <button class="btn btn-outline-danger">Gửi phản hồi</button>
+          </form>
+        </div>
+      </div>
+      </footer>
 
 
 
