--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
         <div class="news_content container">
             <div class="news_item row " style="padding-bottom: 0;">
                 <div class="col-sm-12 col-md-4 news_img" style="padding-left: 0;">
-                    <img src="../img/introIBSEN.jpg" style="width: 100%; height: 70%;">
+                    <img src="./img/introIBSEN.jpg" style="width: 100%; height: 70%;">
                 </div>
 
                 <div class="col-sm-6 col-md-8 news_text" style="padding-top: 3%;">
@@ -854,14 +854,14 @@
                 </div>
 
                 <div class="col-sm-12 col-md-4 news_img" style="padding-left: 0;">
-                    <img src="../img/hinhHoatDongTroChoi.jpg" style="width: 100%;">
+                    <img src="./img/hinhHoatDongTroChoi.jpg" style="width: 100%;">
                 </div>
             </div>
 
 
             <div class="news_item row " style="padding-bottom: 0; margin-top:80px ;">
               <div class="col-sm-12 col-md-4 news_img" style="padding-left: 0;">
-                  <img src="../img/introIBSEN.jpg" style="width: 100%; height: 70%;">
+                  <img src="./img/introIBSEN.jpg" style="width: 100%; height: 70%;">
               </div>
 
               <div class="col-sm-6 col-md-8 news_text" style="padding-top: 3%;">
