--- a/html/HoatDong.html
+++ b/html/HoatDong.html
@@ -156,13 +156,13 @@
                         src="../website/img/logo.png"
                         width="182"
                         height="90"
-                        style="max-height: 90px; height: auto"
+                        style="max-height: 70px; height: auto"
                         alt="Ibsen Logo"
                         class="fusion-mobile-logo"
                       />
   
                       <!-- sticky header logo -->
-                      <h3 class="ml1" style="font-size:20px;">
+                      <h3 class="ml1" id="ml1" style="font-size:20px;">
                         <span class="text-wrapper">
                           <span class="line line1"></span>
                           <span class="letters">IBSEN TINY STAGE</span>
@@ -993,16 +993,16 @@
             <h3>KẾt nối với chúng tôi</h3>
             <div class="row">
             <div class="col-sm-4">
-              <a href="https://www.facebook.com/sankhaunhoibsen" target="_blank" target="_blank"><img src="../img/ifacebook.png" class="img-thumbnail"></a> 
+              <a href="https://www.facebook.com/sankhaunhoibsen" target="_blank" target="_blank"><img src="../img/ifacebook.png" class="img-thumbnail" style="max-width: 100px;"></a> 
             </div>
             <div class="col-sm-4">
-               <a href="#"><img src="../img/icon-zalo.png" class="img-thumbnail"/></a>
+               <a href="#"><img src="../img/icon-zalo.png" class="img-thumbnail" style="max-width: 100px;"/></a>
             </div>
           </div>
         </div>
 
         <div class="col-md-4">
-          <form>
+          <form id="form-footer">
 
             <div class="form-group row">
               <div class="col-sm-10">
