--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                     />
 
                     <!-- sticky header logo -->
-                    <h3 class="ml1" style="font-size:20px;">
+                    <h3 class="ml1" id="ml1" style="font-size:20px;margin-top:20px;">
                       <span class="text-wrapper">
                         <span class="line line1"></span>
-                        <span class="letters">IBSEN TINY STAGE</span>
+                        <span class="letters" id="IBSEN_Tiny">IBSEN TINY STAGE</span>
                         
                         <span class="line line2"></span>
                       </span>
@@ -949,9 +949,9 @@
 
  
 
-      <footer class="container-fluid ">
+      <footer class="container-fluid mx-auto">
         <div class="row ">
-          <div class="col-md-4 col-sm-12 footer_intro">
+          <div class="col-md-4 col-sm-12 footer_intro " id="footer_intro" style="margin-left:0px; " >
             <img src="./img/logo-isben.png" style="width: 40%;">
               <!-- <h3>IBSEN Tiny Stage</h3> -->
               <h3 class="ml3" style="font-size:30px">IBSEN Tiny Stage</h3>
@@ -963,37 +963,37 @@
               </ul>
           </div>
 
-          <div class="col-md-4 col-sm-12 footer_connect">
+          <div class="col-md-4 col-sm-12 footer_connect " id="footer_connect">
             <p><i class="fa fa-map-marked"></i> 141 Điện Biên Phủ, TPHCM</p>
             <p><i class="fa fa-mobile-alt"></i> 0123456789</p>
             <p><i class="fa fa-envelope"></i>  hoangnt18@uef.edu.vn</p>
-            <h3>KẾt nối với chúng tôi</h3>
-            <div class="row">
-            <div class="col-sm-4">
-              <a href="https://www.facebook.com/sankhaunhoibsen" target="_blank"><img src="./img/ifacebook.png" class="img-thumbnail"></a> 
+            <h3 >KẾt nối với chúng tôi</h3>
+            <div class="row container-fluid" id="footer_img">
+            <div class="col-sm-4" id="footer_imgFB" >
+              <a href="https://www.facebook.com/sankhaunhoibsen" target="_blank"><img src="./img/ifacebook.png" class="img-thumbnail" style="max-width: 100px"></a> 
             </div>
-            <div class="col-sm-4">
-               <a href="#"><img src="./img/icon-zalo.png" class="img-thumbnail"/></a>
+            <div class="col-sm-4"  id="zalo-footer">
+               <a href="#"><img src="./img/icon-zalo.png" style="max-width: 100px;" class="img-thumbnail"/></a>
             </div>
           </div>
         </div>
 
         <div class="col-md-4">
-          <form>
+          <form id="form-footer" id="footer_input">
 
-            <div class="form-group row">
-              <div class="col-sm-10">
+            <div class="form-group row" >
+              <div class="col-sm-10" id="footer_Name">
                 <input type="text" class="form-control"  placeholder="Nhập tên của bạn">
               </div>
             </div>
             <div class="form-group row">
-              <div class="col-sm-10">
+              <div class="col-sm-10" id="footer_email">
                 <input type="email" class="form-control"  placeholder="Nhập email của bạn">
               </div>
             </div>
             <div class="form-group row">
-              <div class="col-sm-10">
-                <textarea cols="30" rows="10" class="form-control" placeholder="Phản hồi của bạn"></textarea>
+              <div class="col-sm-10" id="footer_Name">
+                <textarea cols="20" rows="8" class="form-control" placeholder="Phản hồi của bạn"></textarea>
               </div>
             </div>
             <button class="btn btn-outline-danger">Gửi phản hồi</button>
